[gd_scene load_steps=5 format=3 uid="uid://wmasociacvuy"]

[ext_resource type="Texture2D" uid="uid://da4oi3b52er4b" path="res://Shared/assets/branch.png" id="1_k5cnh"]
[ext_resource type="Script" uid="uid://ditrhi0tiof5g" path="res://gameDancarino/gameDancarino.gd" id="1_qqvk5"]
[ext_resource type="PackedScene" uid="uid://b20qxhhyj0u7o" path="res://gameDancarino/Individual/individual.tscn" id="2_1s54u"]

[sub_resource type="LabelSettings" id="LabelSettings_k5cnh"]
font_size = 96
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="gameDancarino" type="Node2D"]
script = ExtResource("1_qqvk5")

[node name="Branch" type="Sprite2D" parent="."]
position = Vector2(994, 625)
texture = ExtResource("1_k5cnh")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="individuals" type="Node2D" parent="."]

[node name="individual" parent="individuals" instance=ExtResource("2_1s54u")]
position = Vector2(386, 526)
queue_position = 5

[node name="individual2" parent="individuals" instance=ExtResource("2_1s54u")]
position = Vector2(586, 526)
queue_position = 4

[node name="individual3" parent="individuals" instance=ExtResource("2_1s54u")]
position = Vector2(786, 526)
queue_position = 3

[node name="individual4" parent="individuals" instance=ExtResource("2_1s54u")]
position = Vector2(986, 526)
queue_position = 2

[node name="individual5" parent="individuals" instance=ExtResource("2_1s54u")]
position = Vector2(1186, 526)
queue_position = 1
is_player = true

[node name="pointSpawn" type="Timer" parent="."]
one_shot = true

[node name="points" type="Label" parent="."]
offset_top = 946.0
offset_right = 547.0
offset_bottom = 1078.0
text = "pontuacao: "
label_settings = SubResource("LabelSettings_k5cnh")

[node name="timeout" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="Timer" to="individuals/individual" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="individuals/individual2" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="individuals/individual3" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="individuals/individual4" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="individuals/individual5" method="_on_timer_timeout"]
[connection signal="player_flying" from="individuals/individual5" to="." method="_on_individual_5_player_flying"]
[connection signal="player_jumping" from="individuals/individual5" to="." method="_on_individual_5_player_jumping"]
[connection signal="timeout" from="pointSpawn" to="." method="_on_point_spawn_timeout"]
[connection signal="timeout" from="timeout" to="." method="_on_timeout_timeout"]
